<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Train</string>
    <string name="title_activity_maps">Train</string>
    <string-array name="main_drawer_options_array">
        <item>Main</item>
        <!--<item>Trains</item>-->
        <!--<item>Trip Planner</item>-->
        <!--<item>Fares</item>-->
        <!--<item>General Information</item>-->
        <item>Official Alerts</item>
        <item>Profile</item>
        <item>About</item>
        <!--<item>Tri-Rail Map</item>-->
        <!--<item>MetroRail Map</item>-->
        <!--<item>All Aboard Florida Map</item>-->
    </string-array>
    <string name="action_websearch">Station search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="call_failed">Unable to call Train Company.</string>
    <string name="not_saved">SAVE</string>
    <string name="saved">SAVED</string>

    <string name="notification_map_action">MAP</string>
    <string name="notification_settings_action">PREFERENCES</string>

    <string name="nearestStation">Nearest Station:</string>
    <string name="directionsLabel">Directions</string>
    <string name="SBTrainLabel">SB:</string>
    <string name="SBTrainExpandedLabel">SOUTH</string>
    <string name="NBTrainLabel">NB:</string>
    <string name="NBTrainExpandedLabel">NORTH</string>
    <string name="nextStopLabel">NEXT STATION</string>
    <string name="scheduledTrainLabel">ARRIVAL</string>
    <string name="fixmytrip_link">fixmytrip.com</string>
    <string name="google_play">Rate us in Google Play</string>
    <string name="dial_train">Dial Tri-Rail (1-800-TRI-RAIL)</string>
    <string name="about_facebook_link">Like us on Facebook</string>

    <string name="preference_file_key">com.fixmytrip.train.PREFERENCE_FILE_KEY</string>
    <string name="preference_home_station">com.fixmytrip.train.home_station</string>
    <string name="preference_away_station">com.fixmytrip.train.away_station</string>
    <string name="preference_first_name">com.fixmytrip.train.firstName</string>
    <string name="preference_last_name">com.fixmytrip.train.lastName</string>
    <string name="preference_email">com.fixmytrip.train.emailAddress</string>
    <string name="preference_NB_train">com.fixmytrip.train.NB_trains</string>
    <string name="preference_SB_train">com.fixmytrip.train.SB_trains</string>
    <string name="preference_star_trains">com.fixmytrip.train.star_trains</string>
    <string name="preference_star_stations">com.fixmytrip.train.star_stations</string>
</resources>
