<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="0dp"
    android:translationZ="0dp"
    android:background="@android:color/transparent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/trainInfoImage"
        android:clickable="false"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:layout_below="@id/trainInfoImage"
        android:gravity="top"
        android:id="@+id/trainInfoHeader"
        android:background="@color/White"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stationName"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:gravity="center_vertical|left"
            android:layout_gravity="center_vertical|left"
            android:text="N/A"
            android:layout_weight="3"
            />
            <!--android:layout_weight="3"-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/StationTimeLayout"
            android:layout_toRightOf="@id/stationName"
            android:layout_weight="4"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SBTrainLabel"
                        android:id="@+id/southboundStationLabel"
                        style="@style/trainStationInfoBarLabel"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"
                        android:id="@+id/southboundStationName"
                        style="@style/trainStationInfoBarValue"
                        android:layout_below="@id/southboundStationLabel"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NBTrainLabel"
                        android:gravity="center_vertical"
                        android:id="@+id/northboundStationLabel"
                        style="@style/trainStationInfoBarLabel"
                        android:layout_toRightOf="@id/southboundStationName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"
                        android:id="@+id/northboundStationName"
                        style="@style/trainStationInfoBarValue"
                        android:layout_toRightOf="@id/northboundStationLabel"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="72dp"
            android:layout_height="fill_parent"
            android:text="12 min"
            android:id="@+id/directionsName"
            android:textColor="@color/Blue"
            android:textSize="15sp"
            android:layout_toRightOf="@id/stationName"
            android:gravity="bottom|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom|center_horizontal"
            />
    </LinearLayout>
    <View
        android:id="@+id/train_info_seperator_0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/trainInfoHeader"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_below="@id/train_info_seperator_0"
        android:id="@+id/trainInfoActionLayout"
        android:background="@color/White"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/trainInfoCallActionLinearLayout"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_black_24dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CALL"
                android:id="@+id/trainInfoCallLabel"
                style="@style/trainStationActionLabel"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/trainInfoSaveActionLinearLayout"
            android:gravity="center"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_black_24dp"
                android:id="@+id/trainInfoSaveIcon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAVE"
                android:id="@+id/trainInfoSaveLabel"
                style="@style/trainStationActionLabel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/trainInfoScheduleActionLinearLayout"
            android:gravity="center"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_schedule_black_24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCHEDULE"
                android:id="@+id/trainInfoScheduleLabel"
                style="@style/trainStationActionLabel"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/train_info_seperator_1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/trainInfoActionLayout"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:id="@+id/trainInfoTimingLayout"
        android:layout_below="@id/train_info_seperator_1"
        android:background="@color/White">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/southboundStationNameExpanded"
                android:textSize="30dp"
                android:text="N/A"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SBTrainExpandedLabel"
                android:id="@+id/southboundStationNameExpandedLabel"
                style="@style/trainStationTimingLabel"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:id="@+id/northboundStationNameExpanded"
                android:text="N/A"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NBTrainExpandedLabel"
                android:id="@+id/northboundStationNameExpandedLabel"
                android:gravity="center_horizontal|bottom"
                android:layout_gravity="center_horizontal|bottom"
                style="@style/trainStationTimingLabel"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/train_info_seperator_2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/trainInfoTimingLayout"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|left"
        android:id="@+id/trainInfoUpdateHeaderLayout"
        android:background="@color/White"
        android:layout_below="@id/train_info_seperator_2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trending_up_black_24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/trainInfoUpdateIcon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UPDATES"
            android:id="@+id/trainInfoUpdateLabel"
            style="@style/trainStationTimingLabel"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/trainStationUpdatelist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_below="@id/trainInfoUpdateHeaderLayout"
        android:background="@color/White">
    </ListView>
    <com.fixmytrip.train.utils.FloatingActionButton
        android:id="@+id/trainInfoNavigationFabButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_above="@id/trainInfoHeader"
        android:layout_alignParentRight="true"
        app:color="@color/Primary3_Orange"
        app:drawable="@drawable/ic_navigation_white_24dp"
        android:layout_marginBottom="-36dp"
        android:animateLayoutChanges="true"
        />
</RelativeLayout>